added topnav in page and calling clientlib

--- a/ui.apps/src/main/content/jcr_root/apps/projectlogin/components/structure/page/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/projectlogin/components/structure/page/customheaderlibs.html
@@ -13,8 +13,11 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 */-->
-<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
-     data-sly-call="${clientlib.css @ categories='projectlogin.base'}"/>
+<meta data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
+     data-sly-call="${clientlib.all @ categories='project.login'}"/>
+</meta>
+
+<div data-sly-resource="${'topnav' @resourceType='projectlogin/components/topnav'}"></div>
 
 <!--/* Include Context Hub */-->
 <sly data-sly-resource="${'contexthub' @ resourceType='granite/contexthub/components/contexthub'}"/>
