--- a/ui.apps/src/main/content/jcr_root/conf/projectlogin/settings/wcm/templates/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/conf/projectlogin/settings/wcm/templates/.content.xml
@@ -3,4 +3,5 @@
     jcr:mixinTypes="[rep:AccessControllable]"
     jcr:primaryType="cq:Page">
     <content-page/>
+    <project-login-dynamic-template/>
 </jcr:root>
